# piaic-hackathon2

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEBUG_AUTH.md  DEPLOYMENT_GUIDE.md  ENV_SETUP.md  JWT_FIX_SUMMARY.md  Procfile  README.md  pyproject.toml  test_interactive.py
.claude/agents/: api-developer-agent.md  quality-guardian-agent.md  schema-architect-agent.md  spec-coordinator-agent.md  spec-writer-agent.md  test-engineer-agent.md  ui-developer-agent.md
.claude/skills/api-contract-guardian/: SKILL.md
.claude/skills/auth-boundary-enforcer/: SKILL.md
.claude/skills/backend-architect/: SKILL.md
.claude/skills/better-auth-integrator/: SKILL.md
.claude/skills/database-designer/: SKILL.md
.claude/skills/frontend-composer/: SKILL.md
.claude/skills/frontend-data-enforcer/: SKILL.md
.claude/skills/monorepo-coordinator/: SKILL.md
.claude/skills/phase1-migrator/: LICENSE.txt  SKILL.md
.claude/skills/spec-architect/: SKILL.md
.claude/skills/spec-interpreter/: LICENSE.txt  SKILL.md
.claude/skills/tdd-conductor/: SKILL.md
.claude/skills/tests-generator/: SKILL.md
.github/workflows/: test.yml
.specify/memory/: constitution.md
backend/: CLAUDE.md  README.md  __init__.py  pyproject.toml
docs/: TASKMATE_AUTH_FLOW.md  UI_Redesign_plan.md
frontend/: package-lock.json  package.json
history/adr/: 001-storage-abstraction-layer.md  002-cli-technology-stack.md  003-date-time-handling-for-recurrence.md  004-phase2-fullstack-architecture.md  005-agent-architecture-for-phase2-development.md  006-two-token-authentication-architecture.md
specs/001-phase1-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-fullstack-web/: 00-backend-architecture.md  00-phase2-overview.md  08-frontend-design-flow.md  plan.md  quickstart.md  tasks.md
src/: __init__.py  config.py
src/cli/: README.md  __init__.py  interactive.py  main.py  pyproject.toml
src/core/: exceptions.py  models.py  recurring.py  services.py  validators.py
src/core/backend/: .env.example  README.md  alembic.ini  config.py  db.py  dependencies.py  main.py  pyproject.toml  requirements.txt
src/core/backend/api/v1/: tasks.py
src/core/backend/migrations/: env.py
src/core/backend/migrations/versions/: 001_create_tasks.py  002_add_completed_index.py
src/core/backend/models/: __init__.py  task.py
src/core/backend/tests/: conftest.py  test_auth.py  test_tasks.py
src/core/backend/tests/fixtures/: jwt_tokens.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py
tests/integration/: test_cli_commands.py  test_cli_errors.py  test_table_rendering.py
tests/unit/: test_interactive.py  test_search_filter.py  test_services.py  test_storage.py
(+113 files in other folders)
